# read-excel

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING  Excel.pro  README  README.md  build.rb  codecov.yml  conanfile.py  excel-config.cmake.in  read-excel-config.cmake.in
.github/workflows/: codeql-analysis.yml  coverity-scan.yml  testing.yml
.reuse/: dep5
excel/: bof.cpp  bof.hpp  book.cpp  book.hpp  cell.cpp  cell.hpp  excel.pri  excel.pro  exceptions.cpp  exceptions.hpp  formula.cpp  formula.hpp  prj.rb  record.cpp  record.hpp  sheet.cpp  sheet.hpp  sst.cpp  sst.hpp  stream.cpp  stream.hpp  string.cpp  string.hpp
excel/compoundfile/: compoundfile.cpp  compoundfile.hpp  compoundfile_exceptions.cpp  compoundfile_exceptions.hpp  compoundfile_stream.cpp  compoundfile_stream.hpp  compoundfile_stream_and_dir.hpp  directory.cpp  directory.hpp  header.cpp  header.hpp  msat.cpp  msat.hpp  sat.cpp  sat.hpp  stream.cpp  utils.cpp  utils.hpp
excel/compoundfile/h/: compoundfile.hpp  msat.hpp
excel/h/: book.hpp  cell.hpp  stream.hpp
read-excel/: bof.hpp  book.hpp  cell.hpp  exceptions.hpp  formula.hpp  parser.hpp  record.hpp  sheet.hpp  sst.hpp  storage.hpp  stream.hpp  string.hpp
read-excel/compoundfile/: compoundfile.hpp  compoundfile_exceptions.hpp  compoundfile_stream_and_dir.hpp  header.hpp  msat.hpp  sat.hpp  utils.hpp
sample/: CMakeLists.txt  main.cpp  prj.rb  sample.pro
tags/1.0.0/excel/: formula.cpp  string.cpp
tags/1.0.0/excel/compoundfile/: exceptions.cpp  header.cpp
tags/1.0.0/excel/compoundfile/h/: directory.hpp  sat.hpp
tags/1.0.0/excel/h/: book.hpp  exceptions.hpp
tags/1.0.0/test/book/: main.cpp
tags/1.0.0/test/cell/: main.cpp
tags/1.0.0/test/formula/: prj.ut.rb
tags/1.0.0/test/header/: main.cpp  prj.rb
tags/1.0.0/test/stream/h/: stream.hpp
tags/1.0.0/test/testdocument/: prj.rb
tags/1.0.1/: COPYING
tags/1.0.1/excel/: bof.cpp  book.cpp  stream.cpp
tags/1.0.1/excel/compoundfile/: msat.cpp
tags/1.0.1/excel/compoundfile/h/: exceptions.hpp  header.hpp
tags/1.0.1/excel/h/: record.hpp
tags/1.0.1/sample/: main.cpp  sample.xls
tags/1.0.1/test/: prj.rb
tags/1.0.1/test/sst/: prj.ut.rb
tags/1.0.1/test/string/: prj.ut.rb
tags/1.1.0/: README
tags/1.1.0/excel/: bof.hpp  cell.cpp  exceptions.cpp  exceptions.hpp  record.cpp  record.hpp  sheet.hpp  sst.cpp  stream.hpp  string.hpp
tags/1.1.0/excel/compoundfile/: compoundfile_exceptions.cpp  compoundfile_stream.cpp  directory.hpp  header.hpp  msat.hpp  sat.hpp
tags/1.1.0/sample/: prj.rb
tags/1.1.0/test/: test.pro
tags/1.1.0/test/cell/: main.cpp  prj.rb
tags/1.1.0/test/compoundfile/: prj.ut.rb
tags/1.1.0/test/formula/: main.cpp
tags/1.1.0/test/header/: main.cpp
tags/1.1.0/test/helper/: helper.hpp
tags/1.1.0/test/stream/: stream.pro
tags/1.1.0/test/testdocument/: document.cpp  testdocument.pro
test/: CMakeLists.txt  prj.rb  test.pro
test/TestRunner/: main.cpp
test/bof/: CMakeLists.txt  bof.pro  main.cpp  prj.rb  prj.ut.rb
test/book/: CMakeLists.txt  main.cpp  prj.rb  prj.ut.rb
test/cell/: CMakeLists.txt  main.cpp  prj.rb  prj.ut.rb
test/complex/: CMakeLists.txt  benchmark.cpp  complex.pro  main.cpp  prj.rb  prj.ut.rb
test/compoundfile/: CMakeLists.txt  main.cpp  prj.rb
test/data/: big.xls  datetime.xls  old.xls  strange.xls  stringformula.xls  test.xls
test/datetime/: CMakeLists.txt  datetime.pro  main.cpp  prj.rb  prj.ut.rb
test/formula/: CMakeLists.txt  main.cpp  prj.rb
test/header/: CMakeLists.txt  header.pro  main.cpp  prj.rb  prj.ut.rb
test/helper/: helper.hpp
test/record/: CMakeLists.txt  main.cpp  prj.rb  prj.ut.rb
test/sst/: CMakeLists.txt  main.cpp  prj.rb
test/stream/: CMakeLists.txt  prj.rb  stream.cpp  stream.hpp  stream.pro
test/string/: CMakeLists.txt  main.cpp  prj.rb  string.pro
test/testdocument/: CMakeLists.txt  document.cpp  document.hpp  testdocument.pro
trunk/: Excel.pro  build.rb
trunk/excel/: book.cpp  book.hpp  formula.cpp  prj.rb  record.cpp  sheet.cpp  sst.cpp  sst.hpp  stream.cpp
trunk/excel/compoundfile/: compoundfile.cpp  compoundfile_exceptions.hpp  compoundfile_stream.hpp  directory.cpp  header.cpp
trunk/excel/compoundfile/h/: stream.hpp  utils.hpp
trunk/excel/h/: bof.hpp  formula.hpp  record.hpp  sst.hpp  stream.hpp  string.hpp
trunk/sample/: sample.pro
trunk/test/TestRunner/: TestRunner.pro
trunk/test/bof/: bof.pro  main.cpp  prj.rb
trunk/test/book/: main.cpp  prj.rb
trunk/test/compoundfile/: main.cpp  prj.rb
trunk/test/formula/: main.cpp
trunk/test/record/: main.cpp
trunk/test/sst/: main.cpp
trunk/test/stream/: stream.cpp
trunk/test/string/: main.cpp  prj.rb
trunk/test/testdocument/h/: document.hpp
trunk/trunk/excel/: cell.cpp  record.cpp
trunk/trunk/excel/h/: sheet.hpp
trunk/trunk/test/sst/: prj.rb
